style: Reformat project with Spotless
