# datacite-draft-doi-handler/src/main/java/no/unit/nva/datacite/model/ReserveDoiRequest.java
@@ -6,14 +6,14 @@ import java.net.URI;
 
 public class ReserveDoiRequest {
 
-    private final URI customer;
+  private final URI customer;
 
-    @JsonCreator
-    public ReserveDoiRequest(@JsonProperty("customer") URI customer) {
-        this.customer = customer;
-    }
+  @JsonCreator
+  public ReserveDoiRequest(@JsonProperty("customer") URI customer) {
+    this.customer = customer;
+  }
 
-    public URI getCustomer() {
-        return customer;
-    }
+  public URI getCustomer() {
+    return customer;
+  }
 }
